# levelscorner-eva3

./: CLAUDE.md  README.md  Session2Assignment.md
docs/: KNOWLEDGE.md  S03-ARCHITECTURE.md
s03-first-agent/: README.md  RUNBOOK.md
s03-first-agent/skill-builder/: .env.example  README.md  _smoke_test.py  llm.py  parser.py  pyproject.toml  skill_builder.py  system_prompt.md  tools.py  ui.py
s03-first-agent/submission/: README.md  linkedin-post.md
s03-first-agent/submission/logs/: run-20260424T161643Z.json  run-20260424T162536Z.json  run-20260424T163631Z.json
