[project]
name = "skill-builder"
version = "0.1.0"
description = "S03 agentic AI assignment — an agent that builds Claude Code skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-genai>=0.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.scripts]
skill-builder = "skill_builder:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
